Clarifying specifity on Page IDs.

--- a/style.css
+++ b/style.css
@@ -271,7 +271,7 @@ textarea:focus {
 
 /* Pages */
 /*  
-  Page ids
+  Specificity ids are found under main > article id="X"
   Home post-10
   About post-14 
   Finances post-21
