--- a/style.css
+++ b/style.css
@@ -50,52 +50,7 @@ body * {
   font-family: Lato, sans-serif;
 }
 
-/* These need to be specified moreso than body - argh. */
-button,
-blockquote cite,
-table,
-.entry .entry-content .wp-block-button .wp-block-button__link,
-.entry .entry-content .wp-block-archives li,
-.entry .entry-content .wp-block-categories li,
-.entry .entry-content .wp-block-latest-posts li,
-.entry .entry-content .wp-block-pullquote cite,
-.entry .entry-content .wp-block-cover-image .wp-block-cover-image-text,
-.entry .entry-content .wp-block-cover-image .wp-block-cover-text,
-.entry .entry-content .wp-block-cover-image h2,
-.entry .entry-content .wp-block-cover .wp-block-cover-image-text,
-.entry .entry-content .wp-block-cover .wp-block-cover-text,
-.entry .entry-content .wp-block-cover h2,
-.entry .entry-content .wp-block-audio figcaption,
-.entry .entry-content .wp-block-video figcaption,
-.entry .entry-content .wp-block-image figcaption,
-.entry .entry-content .wp-block-gallery .blocks-gallery-image figcaption,
-.entry .entry-content .wp-block-gallery .blocks-gallery-item figcaption,
-.entry .entry-content .wp-block-file,
-.entry .entry-content .wp-block-file .wp-block-file__button,
-.entry .entry-content .wp-block-latest-comments .wp-block-latest-comments__comment-meta,
-.comment-navigation .nav-previous,
-.comment-navigation .nav-next,
-.comment-list .pingback .comment-body,
-.comment-list .trackback .comment-body,
-.comment-list .pingback .comment-body .comment-edit-link,
-.comment-list .trackback .comment-body .comment-edit-link,
-.comment-form .comment-notes,
-.comment-form label,
-.gallery-caption,
-.wp-caption-text,
-.widget_archive ul li,
-.widget_categories ul li,
-.widget_meta ul li,
-.widget_nav_menu ul li,
-.widget_pages ul li,
-.widget_recent_comments ul li,
-.widget_recent_entries ul li,
-.widget_rss ul li {
-  font-family: Lato, sans-serif;
-}
-
 /* Base colors & Fonts */
-
 
 h1.site-title#p-title {
   color: var(--white) !important;
@@ -176,7 +131,7 @@ blockquote {
 
 .site-header {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.4))), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/07/mobile-header-3x4.jpg);
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4)),  url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/07/mobile-header-3x4.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4)), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/07/mobile-header-3x4.jpg);
   background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -196,14 +151,11 @@ blockquote {
 
 .site-branding {
   display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
 }
 
@@ -227,7 +179,6 @@ blockquote {
 }
 
 .site-logo .custom-logo-link:hover {
-  -webkit-box-shadow: none;
   box-shadow: none;
 }
 
@@ -242,10 +193,8 @@ blockquote {
 
 #site-navigation.main-navigation {
   display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
@@ -266,7 +215,7 @@ a {
 }
 
 .main-navigation .main-menu>li>a,
-.main-navigation .sub-menu>li>a  {
+.main-navigation .sub-menu>li>a {
   color: var(--fog);
   font-size: 1rem;
 }
@@ -278,7 +227,7 @@ a {
 
 .main-navigation .main-menu>li>a:hover,
 .main-navigation .main-menu>li>a:hover+svg {
-  color: var(--pine);
+  color: var(--fog);
 }
 
 .main-navigation .sub-menu>li>.menu-item-link-return:hover {
@@ -292,6 +241,10 @@ a {
 .main-navigation .sub-menu>li>.menu-item-link-return {
   font-family: Lato, sans-serif;
   text-transform: uppercase;
+}
+
+.main-navigation .main-menu>li.menu-item-has-children .submenu-expand.is-empty {
+  display: block;
 }
 
 .main-navigation .sub-menu>li>a:hover {
@@ -434,12 +387,10 @@ p {
 /* Home */
 
 .cta-box-left {
-  -ms-flex-preferred-size: 100%;
   flex-basis: 100%;
 }
 
 .cta-box-right {
-  -ms-flex-preferred-size: 50%;
   flex-basis: 50%;
 }
 
@@ -455,7 +406,6 @@ h3.callout {
 
 .entry .entry-content .wp-block-button .wp-block-button__link:not(.has-background) {
   background-color: var(--saffron);
-  -webkit-box-shadow: 7px 7px 5px var(--fog);
   box-shadow: 7px 7px 5px var(--fog);
 }
 
@@ -465,16 +415,13 @@ h3.callout {
 
 .cta-box-left {
   display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
 .cta-box-right {
   display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -523,28 +470,22 @@ h3.board-member {
 
 .donor-nav {
   display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
   max-width: 100%;
 }
 
 .entry .entry-content .donate-link {
   display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-direction: row;
   flex-direction: row;
   -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   margin-bottom: .75rem;
 }
@@ -607,6 +548,8 @@ img.donate-icon {
 .site-title:not(:empty)+.site-description:not(:empty):before {
   content: "\007C";
 }
+
+span.next { font-family: Lato, sans-serif !important; }
 
 /* Archives (index.php) */
 
@@ -705,11 +648,9 @@ h2.widget-title {
 .footer-links,
 .contact-info {
   display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
 }
 
@@ -744,14 +685,11 @@ h2.widget-title {
 @media only screen and (min-width: 600px) {
   #site-navigation.main-navigation {
     display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
     flex-direction: column;
     -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
     justify-content: space-between;
   }
 
@@ -763,9 +701,9 @@ h2.widget-title {
     padding: 0 2em;
   }
 
-
   .fixedNav .menu-main-menu-container {
     max-width: 80vw;
+    width: auto;
   }
 
   .fixedNav .menu-main-menu-container ul#menu-main-menu {
@@ -778,23 +716,23 @@ h2.widget-title {
     margin: 0 auto;
   }
 
+  .main-navigation .main-menu>li.menu-item-has-children .submenu-expand.is-empty {
+    display: none;
+  }
+
   .main-menu-more {
     line-height: 1px;
   }
 
   .member-picture {
-    -ms-flex-preferred-size: 35%;
     flex-basis: 35%;
     -webkit-box-flex: 0;
-    -ms-flex-positive: 0;
     flex-grow: 0;
   }
 
   .member-info {
-    -ms-flex-preferred-size: calc(65% - 32px);
     flex-basis: calc(65% - 32px);
     -webkit-box-flex: 0;
-    -ms-flex-positive: 0;
     flex-grow: 0;
   }
 }
@@ -851,10 +789,8 @@ h2.widget-title {
 
   .site-title {
     display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
     font-size: 3rem;
     letter-spacing: 0.19em;
@@ -893,12 +829,10 @@ h2.widget-title {
   }
 
   .cta-box-left {
-    -ms-flex-preferred-size: 70%;
     flex-basis: 70%;
   }
 
   .cta-box-right {
-    -ms-flex-preferred-size: 30%;
     flex-basis: 30%;
   }
 
@@ -925,7 +859,6 @@ h2.widget-title {
   .entry .entry-content .donor-nav {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-    -ms-flex-direction: row;
     flex-direction: row;
     max-width: 100%;
   }
@@ -955,7 +888,7 @@ h2.widget-title {
     font-size: 1.25rem;
   }
 
-  .entry .entry-content > * {
+  .entry .entry-content>* {
     max-width: 100vw;
   }
 
@@ -972,7 +905,6 @@ h2.widget-title {
 
   #colophon .widget-column {
     -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
     justify-content: space-between;
   }
 
@@ -1046,22 +978,18 @@ h2.widget-title {
   }
 
   .member-picture {
-    -ms-flex-preferred-size: 35%;
     flex-basis: 35%;
   }
 
   .member-info {
-    -ms-flex-preferred-size: 65%;
     flex-basis: 65%;
   }
 
   .entry .entry-content .donate-link {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-    -ms-flex-direction: row;
     flex-direction: row;
     -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
   }
 
@@ -1103,12 +1031,9 @@ h2.widget-title {
 
   .site-logo .custom-logo-link {
     display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -ms-flex-line-pack: center;
     align-content: center;
     -webkit-box-pack: end;
-    -ms-flex-pack: end;
     justify-content: flex-end;
     margin: 0 0 0 auto;
   }
@@ -1116,7 +1041,6 @@ h2.widget-title {
   .site-title {
     grid-area: title;
     -webkit-box-pack: start;
-    -ms-flex-pack: start;
     justify-content: start;
     margin: 0 auto;
     padding: 2.25rem 0 0;
@@ -1159,12 +1083,10 @@ h2.widget-title {
   }
 
   .member-picture {
-    -ms-flex-preferred-size: 35%;
     flex-basis: 35%;
   }
 
   .member-info {
-    -ms-flex-preferred-size: 65%;
     flex-basis: 65%;
   }
 }
